--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,23 +2,58 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
-             android:layout_height="match_parent"
+             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              tools:context=".HomeFragment">
 
-
-    <TextView
-            android:id="@+id/random"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            />
-
-    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
-            android:id="@+id/btn1" android:text="random" />
-
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="home fragment"/>
+            android:layout_height="match_parent">
+
+        <EditText android:layout_height="50dp"
+                  android:layout_width="251dp"
+                  android:id="@+id/etName"
+                  app:layout_constraintStart_toStartOf="parent"
+                  android:layout_marginStart="84dp" android:layout_marginTop="40dp"
+                  app:layout_constraintTop_toTopOf="parent"/>
+
+
+        <TextView
+                android:id="@+id/random"
+                android:layout_width="247dp"
+                android:layout_height="53dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="192dp" android:layout_marginLeft="88dp"/>
+
+        <Button android:layout_width="273dp"
+                android:layout_height="60dp"
+                android:id="@+id/btn1"
+                android:text="Start New Session"
+                app:layout_constraintLeft_toLeftOf="parent"
+
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="68dp" android:layout_marginTop="120dp"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+
+        <EditText android:layout_height="50dp"
+                  android:layout_width="251dp"
+                  android:id="@+id/et"
+                  app:layout_constraintStart_toStartOf="parent"
+                  android:layout_marginStart="80dp" android:layout_marginTop="308dp"
+                  app:layout_constraintTop_toTopOf="parent"/>
+        <Button
+                android:text="Join Session"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button" android:layout_marginBottom="296dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btn1"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="144dp" app:layout_constraintVertical_bias="1.0"/>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </FrameLayout>
