--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,7 +3,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
-             tools:context=".HomeFragment">
+             tools:context=".fragments.HomeFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -38,7 +38,7 @@
 
         <EditText android:layout_height="50dp"
                   android:layout_width="251dp"
-                  android:id="@+id/et"
+                  android:id="@+id/etSession"
                   app:layout_constraintStart_toStartOf="parent"
                   android:layout_marginStart="80dp" android:layout_marginTop="308dp"
                   app:layout_constraintTop_toTopOf="parent"/>
@@ -46,7 +46,7 @@
                 android:text="Join Session"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/button" android:layout_marginBottom="296dp"
+                android:id="@+id/btn2" android:layout_marginBottom="296dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btn1"
                 app:layout_constraintStart_toStartOf="parent"
