--- a/app/src/main/res/layout/single_message.xml
+++ b/app/src/main/res/layout/single_message.xml
@@ -4,7 +4,8 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:layout_margin="10dp">
+              android:layout_margin="10dp"
+              android:id="@+id/message">
 
     <TextView
             android:id="@+id/title"
