--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -52,20 +52,20 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginBottom="60dp"
-                android:background="#ffffff"
-                android:padding="30dp"
+                android:background="@drawable/rounded_rectangle"
+                android:padding="13dp"
                 android:textSize="20sp"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/send_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:fabSize="normal"
+                app:fabSize="mini"
                 android:src="@drawable/ic_send_black_24dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginBottom="70dp"
+                android:layout_marginBottom="65dp"
                 android:layout_alignParentEnd="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
