--- a/app/src/main/res/layout/single_message.xml
+++ b/app/src/main/res/layout/single_message.xml
@@ -5,19 +5,28 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
-              android:id="@+id/message">
+              android:id="@+id/message"
+              android:visibility="gone">
 
     <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:textStyle="bold"/>
+            android:layout_marginEnd="5dp"
+            android:textSize="13sp"
+            android:textStyle="bold"
+            android:textColor="@color/grey"/>
     <TextView
             android:id="@+id/body"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="22sp"
-            android:textStyle="bold"/>
+            android:background="@drawable/rounded_rectangle"
+            android:paddingEnd="10dp"
+            android:paddingStart="12dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:textSize="17sp"
+            android:textStyle="bold"
+            android:textColor="@color/white"/>
 
 </LinearLayout>
