--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="green">#00FF00</color>
+    <color name="blue">#33B2FF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="grey">#999999</color>
+
 </resources>
