--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,56 +1,156 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
-             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
-             tools:context=".fragments.HomeFragment">
+             android:layout_height="match_parent"
+             tools:context=".fragments.HomeFragment"
+             android:background="#3600BCD4"
+             android:fitsSystemWindows="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        <EditText android:layout_height="50dp"
-                  android:layout_width="251dp"
+        <TextView
+                android:text="Enter Name:"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textName"
+                android:textSize="24sp"
+                android:layout_marginTop="76dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+               />
+
+        <EditText android:layout_height="52dp"
+                  android:layout_width="242dp"
                   android:id="@+id/etName"
-                  app:layout_constraintStart_toStartOf="parent"
-                  android:layout_marginStart="84dp" android:layout_marginTop="40dp"
-                  app:layout_constraintTop_toTopOf="parent"/>
+                  android:background="@color/light_grey"
+                  android:layout_marginTop="68dp"
+                  android:layout_marginStart="4dp"
+                  app:layout_constraintTop_toTopOf="parent"
+                  app:layout_constraintStart_toEndOf="@+id/textName"
+                  />
+
+        <TextView
+                android:text="Select Colour"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textColor"
+                android:textSize="24sp"
+                android:layout_marginTop="48dp"
+                android:layout_marginStart="112dp"
+                app:layout_constraintTop_toBottomOf="@+id/etName"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+        <RadioGroup
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/radioGroup"
+                android:checkedButton="@color/white"
+                android:orientation="horizontal"
+                android:layout_marginStart="60dp"
+                app:layout_constraintTop_toBottomOf="@+id/textColor"
+                app:layout_constraintStart_toStartOf="parent">
+
+            <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
+                    android:background="@drawable/red_circle"
+                    android:id="@+id/red"
+                    android:checked="true"
+            />
+
+            <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
+                    android:background="@drawable/blue_circle"
+                    android:id="@+id/blue"
+            />
+
+            <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
+                    android:background="@drawable/green_circle"
+                    android:id="@+id/green"
+            />
+            <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
+                    android:background="@drawable/orange_circle"
+                    android:id="@+id/orange"
+            />
+
+        </RadioGroup>
+
+        <TextView
+                android:text="Enter Session:"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/enterSession"
+                android:textSize="24sp"
+                android:layout_marginTop="52dp"
+                android:layout_marginStart="4dp"
+                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+        <EditText android:layout_height="48dp"
+                  android:layout_width="216dp"
+                  android:id="@+id/etSession"
+                  android:background="@color/light_grey"
+                  android:layout_marginTop="308dp"
+                  android:layout_marginStart="4dp"
+                  app:layout_constraintTop_toTopOf="parent"
+                  app:layout_constraintStart_toEndOf="@+id/enterSession"/>
+        <Button
+                android:text="Join Session"
+                android:layout_width="160dp"
+                android:layout_height="56dp"
+                android:id="@+id/joinSession"
+                android:background="@drawable/rounded_rectangle"
+                android:textSize="18sp"
+                android:layout_marginTop="40dp"
+                android:layout_marginStart="112dp"
+                app:layout_constraintTop_toBottomOf="@+id/etSession"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/or"
+                android:text="OR"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="176dp"
+                app:layout_constraintTop_toBottomOf="@+id/joinSession"
+                app:layout_constraintStart_toStartOf="parent" />
+
+        <Button android:layout_width="264dp"
+                android:layout_height="56dp"
+                android:id="@+id/newSession"
+                android:text="Start New Session"
+                android:background="@drawable/rounded_rectangle"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="60dp"
+                android:textSize="18sp" android:layout_marginTop="28dp"
+                app:layout_constraintTop_toBottomOf="@+id/or"/>
 
 
         <TextView
                 android:id="@+id/random"
-                android:layout_width="247dp"
-                android:layout_height="53dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="192dp" android:layout_marginLeft="88dp"/>
+                android:layout_width="344dp"
+                android:layout_height="51dp"
+                android:textSize="30sp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="40dp"
+                app:layout_constraintTop_toBottomOf="@+id/newSession"
+                app:layout_constraintStart_toStartOf="parent"/>
 
-        <Button android:layout_width="273dp"
-                android:layout_height="60dp"
-                android:id="@+id/btn1"
-                android:text="Start New Session"
-                app:layout_constraintLeft_toLeftOf="parent"
-
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="68dp" android:layout_marginTop="120dp"
-                app:layout_constraintTop_toTopOf="parent"/>
-
-
-        <EditText android:layout_height="50dp"
-                  android:layout_width="251dp"
-                  android:id="@+id/etSession"
-                  app:layout_constraintStart_toStartOf="parent"
-                  android:layout_marginStart="80dp" android:layout_marginTop="308dp"
-                  app:layout_constraintTop_toTopOf="parent"/>
-        <Button
-                android:text="Join Session"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/btn2" android:layout_marginBottom="296dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btn1"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="144dp" app:layout_constraintVertical_bias="1.0"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
