--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -5,7 +5,8 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="fragments.MessageFragment"
-             android:background="#f2f2f2" android:fitsSystemWindows="false">
+             android:background="#f2f2f2"
+             android:fitsSystemWindows="false">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -46,16 +47,16 @@
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/title"
+
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/text1"
-                android:layout_marginBottom="145dp"
+                app:layout_constraintBottom_toTopOf="@id/messageText"
+                android:layout_marginBottom="10dp"
         />
 
 
         <EditText
-                android:id="@+id/text1"
+                android:id="@+id/messageText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
